--- a/MoldingProjectControlWebApp/Pages/MoldPage/Edit.cshtml
+++ b/MoldingProjectControlWebApp/Pages/MoldPage/Edit.cshtml
@@ -45,7 +45,15 @@
 
     <script>
         $(document).ready(function () {
-            $("#moldWorkpiece-dropdown").multiselect({ enableFiltering: true });
+            $("#moldWorkpiece-dropdown").multiselect({
+                enableFiltering: true,
+                buttonWidth: '100%',
+                buttonClass: 'btn btn-outline-secondary',
+                nonSelectedText: 'موردی انتخاب نشده',
+                filterPlaceholder: 'جستجو',
+                allSelectedText: "همه موارد انتخاب شده",
+                nSelectedText: "مورد انتخاب شده",
+            });
         });
     </script>
 }
