--- a/MoldingProjectControlWebApp/Pages/ProjectPage/Edit.cshtml
+++ b/MoldingProjectControlWebApp/Pages/ProjectPage/Edit.cshtml
@@ -75,7 +75,15 @@
 
     <script>
         $(document).ready(function () {
-            $("#projectMold-dropdown").multiselect({ enableFiltering: true });
+            $("#projectMold-dropdown").multiselect({
+                enableFiltering: true,
+                buttonWidth: '100%',
+                buttonClass: 'btn btn-outline-secondary',
+                nonSelectedText: 'موردی انتخاب نشده',
+                filterPlaceholder: 'جستجو',
+                allSelectedText: "همه موارد انتخاب شده",
+                nSelectedText: "مورد انتخاب شده",
+            });
         });
     </script>
 }
